--- a/gb/24/10/11/n14348811.md
+++ b/gb/24/10/11/n14348811.md
@@ -3,71 +3,42 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>半岛青年创生论坛 周春米盼青年闪耀屏东</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348812-715328-600x400.jpg" />
-<h6>2024 半岛青年创生论坛，吸引近百位来自全台各地的青年参与。（屏东县政府提供）
-</h6>
+<h6>2024 半岛青年创生论坛，吸引近百位来自全台各地的青年参与。（屏东县政府提供）</h6>
 <hr>
 <p>【大纪元2024年10月11日讯】（大纪元记者简惠敏台湾屏东报导）屏东县政府10月10日至11日，在恒春半岛举办“2024 半岛青年创生论坛”，吸引近百位来自全台各地的青年、返乡青农、科技业者、地方创生团队参与，县长周春米11日颁发结业证书，并致赠红藜、红豆、洋葱、可可及咖啡等“屏东种子”，期许学员为屏东地方创生努力，开出美好与希望的果实。</p>
 <p>周春米表示，透过举办青年论坛，串联20组屏东在地青年团队，将来自各方的创新能量汇聚在一起，更吸引来自全台各地的“屏漂青年”，为期两天一夜的活动以“地方创生”为主题，透过大师论坛、青年交流、创生走读、故事分享等方式，让有想法、有创意的青年更加清楚县府团队未来在各项建设的努力方向，也让青年看见属于恒春半岛独特的创生面貌。</p>
 <p>周春米说，恒春半岛拥有丰富的自然资源和人文底蕴，区域的发展一直都是县府团队重视的环节，屏东青年旅创基地长期培育在地青年团队及人才，透过举办一系列的培育计划，为在地青年提供创业培训、资源对接等服务，协助他们在屏东落地生根，未来也将持续举办相关活动，与青年一同着眼未来，为屏东的发展擘划出新方向。</p>
 <p>县府劳动暨青年发展处表示，“2024半岛青年创生论坛”创生走读四条游程路线的规划团队，包括“夭夭艺文工作室”、“蛙趣自然生态”、“伴岛生活”、“不勿正业工作室”，让学员可以从山、海、文化、生活四个面向切入，带领学员从不同角度，深入体验恒春半岛地方创生的魅力，让学员成为推动地方创生的重要力量。</p>
-<figure id="attachment_14348813" aria-describedby="caption-attachment-14348813" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14348813-715329.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14348813" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348813-715329-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14348813" class="wp-caption-text">屏东县长周春米期许结业学员一起为屏东地方创生努力。（屏东县政府提供）</figcaption></figure>
+<figure id="attachment_14348813" aria-describedby="caption-attachment-14348813" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14348813-715329.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14348813" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348813-715329-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14348813" class="wp-caption-text">屏东县长周春米期许结业学员一起为屏东地方创生努力。（屏东县政府提供）</figcaption></figure>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/17/n14097226.md#1">韩国央行料19日按兵不动 首次降息延后至明年Q2</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343089.md#1">韩国公开可打击地堡的玄武-5导弹 震慑朝鲜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343378.md#1">【全球新闻】应对中共 韩国菲律宾升为战略伙伴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344043.md#1">韩国对中国厚板产品进行反倾销调查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299212.md#1">配合打诈 数发部长：8月Meta全面验广告刊登者身份</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305071.md#1">租屋处供诈团放DMT骗千万 台中餐厅员工月入2万遭逮</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313671.md#1">男月租8房放DMT设备 转租诈团月入600万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314280.md#1">出席全面阻绝诈骗论坛 赖清德提5打诈作为</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/27/n14318827.md#1">台数发部打诈 推通报查询网</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/30/n14320985.md#1">强化防诈意识 打诈仪表板上线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/22/n14208458.md#1">屏东空中游览超夯   秒杀完售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348867.md#1">中制电动公车资安存疑 立委忧酿木马屠城 经长允全面清查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348861.md#1">总预算和解饭无共识 蓝白：未见具体方案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348830.md#1">外送运费修法 将确保公平合理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348831.md#1">强烈磁暴袭地球 专家：干扰无线通讯及电力系统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348835.md#1">花莲往返台北航班 11月起增至每周20架次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348785.md#1">【专访】数位打诈 专家：执法量能待提升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348798.md#1">台股站上2万2900点 00887遭关禁闭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348741.md#1">祝贺重阳节 赖清德探视古宁头战役荣民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348739.md#1">台湾参与印太韧性伙伴 专家：有利共同生产武器</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/5/n14110167.md#1">嘉大与县府合办 智慧农业培训班嘉惠青农</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/21/n14230431.md#1">林孟宽 打造水果丝瓜品牌的青农</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267159.md#1">破往年纪录 云林15入获选百大青农</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306864.md#1">屏东西市场快闪 海尼根携手周春米表扬青农</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348792.md#1">黑胶藏家陈明章屏烟特展 体验老派音乐趴踢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348795.md#1">屏县府携手亚洲冲浪联盟 推运动观光海洋盛事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348697.md#1">云林诏安客家文化节系列压轴活动 崇远堂秋季祭祖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348125.md#1">平安度过山陀儿台风 国庆烟火闪耀云林夜空</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14348103.md#1">第五届配天宫圣母杯青少棒锦标赛盛大开幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347989.md#1">屏基产房生机勃勃 喜迎4名国庆宝宝</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14336805.md#1">【未解之谜】惊人的巧合 古今中外预言同指：2026大变局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339816.md#1">【未解之谜】中国北方异象频现 有大事要发生？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/6/n13700595.md#1">【舞蹈】中国古典舞技术技巧第五集：趱步</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14335039.md#1">半百富翁心生一念转变人生 孝廉温情“家书”救了一家人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14335274.md#1">中医玄妙医理 鸭子唾液起大作用 医生怎样悟到？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339908.md#1">【新闻五人行】社科院地震 引发中共政治动荡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/21/n14335821.md#1">【晚间新闻】纽约市长出庭竖大拇指 5罪均不认</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339915.md#1">【新闻欣视角】70年来首次 日本“顺路”穿台海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14339084.md#1">中共最新核潜艇在武汉沉没 官方掩盖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339414.md#1">李小鹏被免中共交通运输部党组书记一职</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339365.md#1">湖南财政厅长坠亡案被爆牵出中纪委副书记</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14339170.md#1">唐嫣巴黎时装周惊艳亮相 首秀T台展超模气场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339911.md#1">曾志伟卷入假月饼风波 大陆网红被罚近7千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14339213.md#1">胡歌新剧名称引争议 相关话题冲上热搜榜首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340390.md#1">Netflix上半年收视榜出炉 《泪之女王》登韩剧冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340367.md#1">传范冰冰与大马导演张吉安合作新片 经纪人回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339547.md#1">为什么人老了会“缩水”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340058.md#1">柔软精无效？ 用这一物可让僵硬的毛巾变软</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337725.md#1">泡脚养全身 中药足浴4大健康功效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/23/n14337009.md#1">简单习惯提升能量 改善记忆力与思考清晰度</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/25/n14337769.md#1">5种习惯让你头痛 按穴位快速止痛</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/11/n14348811.htm">半岛青年创生论坛 周春米盼青年闪耀屏东</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348811.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
