--- a/gb/24/11/15/n14371791.md
+++ b/gb/24/11/15/n14371791.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高雄城市咖啡节 凹子底公园飘香登场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14371793-724043-600x400.jpg" />
-<h6>“高雄城市咖啡节”11月23、24日在凹子底公园登场。（高市府提供）
-</h6>
+<h6>“高雄城市咖啡节”11月23、24日在凹子底公园登场。（高市府提供）</h6>
 <hr>
 <p>【大纪元2024年11月15日讯】（大纪元记者方金媛台湾高雄报导）高市观光局今年首次举办“高雄城市咖啡节”，将于11月23、24日在凹子底公园飘香登场。活动集结了高雄山区原乡部落、海边、市区知名咖啡及甜点店家共60家，包括冰滴咖啡、手冲咖啡、拿铁咖啡或咖啡甜点、咖啡酒等，邀请民众呼朋引伴一起来品尝咖啡美食，并进一步了解高雄咖啡产业。</p>
 <figure id="14371794" aria-describedby="caption-14371794" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/11/id14371794-724044-450x562.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/11/id14371794-724044-450x562.jpg" alt="一杯咖啡配上可丽露，感受高雄的浪漫。" width="450" b="562" /></a><figcaption id="caption-14371794" class="wp-caption-text">一杯咖啡配上可丽露，感受高雄的浪漫。（高市府提供）</figcaption></figure>
@@ -19,36 +18,34 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355745.md#1">台湾咖啡节26日起登场 96家好咖打造“城市咖啡厅”</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358300.md#1">齐聚好咖！品味香气缭绕的台湾咖啡节嘉年华</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363998.md#1">古坑季节角落工作室—在四季更迭中拥抱生命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371079.md#1">免疫力低易诱发带状疱疹1/5为糖尿病患</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369535.md#1">季节限定 莲雾“鲜切即食”上架便利商店</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369442.md#1">科工馆自策展 “星动时刻．量测传说”登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368692.md#1">百年古迹化身创生基地 带路漫游哈玛星系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367245.md#1">“港都中的幸福未满”展 看见多元贫穷者面貌</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650356.md#1">桥头建地闲置量大 新市镇三期拟砍百公顷森林民团抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649365.md#1">赖瑞隆8岁子疑霸凌同学至少3人 校方通报依法调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644954.md#1">高雄男诓提供账号解锁服务 诈5万元6人受害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643516.md#1">用生命感动生命 混障勇士传递爱与希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635897.md#1">桥头预售屋疑因台积电想涨价 建商毁约转卖遭判赔二千余万</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366679.md#1">美国梦的传承 港妈延续父辈善举回馈社区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358064.md#1">效职冥府的清朝进士吐露什么天机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364035.md#1">商人突然怦然心动 枯骨果然是稀世珍宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371393.md#1">【演员专访】神韵明星：小林健司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370727.md#1">【新闻欣视角】马斯克要砍四分之三联邦机构？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370738.md#1">【新闻大破解】外交十招 川普贸战终结新冷战？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369816.md#1">沈舟：中共新型战斗机歼-35的疑问多多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369942.md#1">珠海驾车撞人案 受害者家属发帖讲述悲痛经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370156.md#1">中共对珠海惨案下指令 分析：或借机严控全民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369579.md#1">《拥抱太阳的月亮》宋再临离世 享年39岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14369016.md#1">孙俪再携一对儿女挺邓超 曝光另类育儿经</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369372.md#1">曾任反诈骗大使 林逸欣今卷诈骗案 无奈发文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369964.md#1">频道停更3年 大陆网红李子柒恢复更新登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370673.md#1">赵薇遭封杀逾三年 IG晒手转陀螺照引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370984.md#1">洗衣粉和洗衣精有何不同？ 哪个比较好？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369450.md#1">家中这项物品比马桶座脏15倍 你可能不知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370289.md#1">专家：吃这些“疗愈食物”会让你心情更差</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364614.md#1">养肺必读！中医教你日常生活养肺四大秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366957.md#1">加一勺起死回生？肉桂绝妙用法</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/15/n14371791.htm">高雄城市咖啡节 凹子底公园飘香登场</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371791.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
